--- a/grades.ini
+++ b/grades.ini
@@ -48,8 +48,8 @@ interpretiert und gegebenfalls diskutiert=1
 [gewichte]
 sprache=3                                                                                              
 inhalt=10                                                                                              
-methode – formatierung=1                                                                                
-methode – quellenangabe=1                                                                               
-methode – implementierung=2                                                                             
-methode – evaluation=3      
+formatierung=1                                                                                
+quellenangabe=1                                                                               
+implementierung=2                                                                             
+evaluation=3      
 
