--- a/grades.ini
+++ b/grades.ini
@@ -48,8 +48,8 @@
 [gewichte]
 ***REMOVED***                                                                                              
 ***REMOVED***                                                                                              
-methode – ***REMOVED***                                                                                
-methode – ***REMOVED***                                                                               
-methode – ***REMOVED***                                                                             
-methode – ***REMOVED***      
+***REMOVED***                                                                                
+***REMOVED***                                                                               
+***REMOVED***                                                                             
+***REMOVED***      
 
