Update to version 1.0.0

--- a/grades.ini
+++ b/grades.ini
@@ -1,3 +1,4 @@
+;v1.0.0
 [sprache]
 ***REMOVED***
 ***REMOVED***
@@ -31,7 +32,6 @@
 
 [quellenangabe]
 ***REMOVED***
-***REMOVED***
 
 [implementierung]
 ***REMOVED***
@@ -43,6 +43,9 @@
 ***REMOVED***
 ***REMOVED***
 ***REMOVED***
+***REMOVED***
+
+[mali]
 ***REMOVED***
 
 [gewichte]
