Update to version 1.0.0

--- a/grades.ini
+++ b/grades.ini
@@ -1,3 +1,4 @@
+;v1.0.0
 [sprache]
 rechtschreibung=4
 grammatik=2
@@ -10,17 +11,17 @@ sprachliche struktur=1
 abstract=3
 zielsetzung=1
 motivation=1
-einschränkungen=1
-forschungsstand=2
+einschränkungen=5
+forschungsstand=5
 definiert=1
-präzise=2
-alle wichtigen aspekte=2
+präzise alle wichtigen aspekte=2
+korrekt logisch=1
 roter Faden=2
+schwerpunkt=1
 kritische betrachtung=1
 objektiv=1
 fazit=1
 ausblick=3
-aufbau=1
 abbildungen=1
 
 [formatierung]
@@ -30,8 +31,7 @@ ränder=4
 abbildungen=4
 
 [quellenangabe]
-passend und ausreichend zitiert=1
-sorgfältig=2
+passend ausreichend zitiert sorgfältig=2
 
 [implementierung]
 sinnvolle werkzeuge=1
@@ -44,6 +44,9 @@ beschrieben=2
 statistisch signifikant=2
 präsentation=1
 interpretiert und gegebenfalls diskutiert=1
+
+[mali]
+gesamtleistung nicht befriedigend=False
 
 [gewichte]
 sprache=2
